# mission-module

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
cmake/: Dependencies.cmake
doc/: mission_module.md
docs/: mission_module.md
docs/uml/: command.puml
include/bringauto/: JsonHelper.hpp  JsonValidator.hpp
include/bringauto/ba_json/: JsonHelper.hpp
include/bringauto/json/: DeviceCommand.hpp  DeviceError.hpp  DeviceStatus.hpp  EnumUtils.hpp  SerializationUtils.hpp  Structures.hpp
include/bringauto/modules/mission_module/: AutonomyAction.hpp  AutonomyCommand.hpp  AutonomyState.hpp  Constants.hpp  Context.hpp  MissionModule.hpp  external_server_api_structures.hpp
include/bringauto/modules/mission_module/devices/: AutonomyDevice.hpp
include/bringauto/protobuf/: ProtobufHelper.hpp
lib/protobuf-mission-module/: MissionModule.pb.cc  MissionModule.pb.h  MissionModule.proto  pyproject.toml
lib/protobuf-mission-module/mission_module_protobuf_files/: MissionModule_pb2.py
resource/: external_server_example_config.json
source/: device_management.cpp  external_server_api.cpp  memory_management.cpp  module_manager.cpp
source/bringauto/: JsonHelper.cpp  JsonValidator.cpp
source/bringauto/ba_json/: JsonHelper.cpp
source/bringauto/json/: DeviceCommand.cpp  DeviceError.cpp  DeviceStatus.cpp  EnumUtils.cpp  SerializationUtils.cpp
source/bringauto/modules/mission_module/devices/: AutonomyDevice.cpp
source/bringauto/protobuf/: ProtobufHelper.cpp
src/: module_manager.cpp
tests/: README.md  requirements.txt  test_disconnect_on_stop_arrival.py
tests/libs/: ExternalProtocol_pb2.py  sniff_mqtt.py  testing_utilities.py
